k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: smartcity
  labels:
    name: smartcity
    environment: production
